Enable predictive back gesture for Settings app.
Bug: 238729272
Test: manually tested on device
Change-Id: Ib75902d1d7bbd289705cb62ef00d5840676bda72
(cherry picked from commit 15b0780b942ba31ee57e28e4d32cae13be949258 [formerly 1bda6428c234431234782efca65d1637b0729d7d])
Merged-In: Ib75902d1d7bbd289705cb62ef00d5840676bda72

Former-commit-id: 76516bbd3dde1f9f88f211f7299b3625ee2ec618

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -131,7 +131,8 @@
             android:usesCleartextTraffic="true"
             android:defaultToDeviceProtectedStorage="true"
             android:directBootAware="true"
-            android:appComponentFactory="androidx.core.app.CoreComponentFactory">
+            android:appComponentFactory="androidx.core.app.CoreComponentFactory"
+            android:enableOnBackInvokedCallback="true">
 
         <uses-library android:name="org.apache.http.legacy" />
 
